--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "express": "^4.16.2",
     "lodash": "^4.17.4",
+    "moment": "^2.19.1",
     "socket.io": "^2.0.4"
   },
   "devDependencies": {
